add cgi-bin to apache config refs #1

--- a/httpd-conf.d/ezbike.conf
+++ b/httpd-conf.d/ezbike.conf
@@ -1,5 +1,6 @@
 <VirtualHost *:80>
     ServerName ezbike.xweb.service.cmwp.com
     DocumentRoot /data/githubclone/galdosd/ezbike
+    ScriptAlias /cgi-bin/ "/data/githubclone/galdosd/ezbike/cgi-bin/"
 </VirtualHost>
 
